# datagouv-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.circleci/: config.yml
.cursor/rules/: client-config.md  developer-notes.md  overview.md
.github/ISSUE_TEMPLATE/: 1_general.yml
helpers/: crawler_api_client.py  datagouv_api_client.py  env_config.py  hydra_db.py  matomo.py  metrics_api_client.py  tabular_api_client.py
tests/: test_datagouv_api.py  test_datagouv_api_client.py  test_health_endpoint.py  test_matomo.py  test_tabular_api.py  test_tabular_api_client_errors.py  test_tool_logging.py
tools/: __init__.py  download_and_parse_resource.py  get_dataservice_info.py  get_dataservice_openapi_spec.py  get_dataset_info.py  get_metrics.py  get_resource_info.py  list_dataset_resources.py  query_dataset_data.py  query_resource_data.py  search_dataservices.py  search_datasets.py
