[project]
name = "datagouv-mcp"
version = "0.1.0"
description = "Add your description here"
authors = [
    {name = "data.gouv.fr", email = "opendatateam@data.gouv.fr"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "aiohttp>=3.13.2",
    "httpx>=0.28.1",
    "mcp>=1.22.0",
]

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.14.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
